# enin-python

./: README.md  pyproject.toml
src/enin/: datasets.py
