[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enin"
version = "0.0.1"
authors = [
    { name="Enin", email="support@enin.ai" },
]
license = { text="Apache-2.0" }

dependencies = [
    "requests>=2.32.3, <3",
]
description = "The official Python library for the Enin API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://enin.ai"
Repository = "https://github.com/team-enin/enin-python"
Issues = "https://github.com/team-enin/enin-python/issues"
